# Cicada

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: argparse.rs  date_utils.rs  encrypt.rs  main.rs  view_dates.rs  view_month.rs
src/dates/: date.file
